--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,182 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.offscreen {
+  position: absolute;
+  left: -10000px;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  font-family: "Nunito", sans-serif;
+  background: #000;
+  color: #fff;
+}
+
+button,
+select {
+  font: inherit;
+  padding: 0.25em;
+}
+
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+#root {
+  /* React root div */
   min-height: 100vh;
+  display: flex;
+  flex-flow: column nowrap;
+  max-width: 1140px;
+  width: 70%;
+  margin: 0 auto;
+}
+.container {
+  max-width: 1140px;
+  width: 70%;
+  margin: 10vh auto;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.main,
+.header,
+.footer {
+  padding: 0.25em;
+  margin: 0 2em;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.main {
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: 2fr;
+  margin: 15vh auto;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.main--products {
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+
+.main--cart {
+  flex-flow: column nowrap;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+
+.header__price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__price li {
+  list-style: none;
+}
+
+.header__price li:last-child {
+  margin-left: 2rem;
+}
+
+.nav {
+  display: flex;
+  justify-content: flex-end;
+  gap: 0.5em;
+  margin-top: 0.5em;
+}
+
+.footer {
+  flex-grow: 1;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-end;
+}
+
+.product {
+  width: 90%;
+  margin-bottom: 1em;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  margin: 0 auto;
+  gap: 2rem;
+  box-shadow: rgba(242, 239, 239, 0.45) 0px 0.0625em 0.0625em,
+    rgba(255, 255, 255, 0.45) 0px 0.125em 0.5em,
+    rgba(255, 255, 255, 0.2) 0px 0px 0px 1px inset;
+}
+
+.product__img {
+  max-height: 350px;
+  object-fit: cover;
+}
+
+.product__description {
+}
+
+.product__description h1 {
+  font-size: clamp(1.2rem, 4vw, 2.5rem);
+}
+
+.cart {
+  padding: 0;
+  margin-top: 0.5em;
+}
+
+.cart__item {
+  display: grid;
+  grid-template-columns: 4fr 3fr 1fr 1fr;
+  gap: 0.5rem;
+  margin-bottom: 0.5em;
+}
+
+.cart__img {
+  display: none;
+  min-width: 68px;
+}
+
+.cart__select {
+  max-height: 48px;
+}
+
+.cart__item-subtotal {
+  display: none;
+  text-align: center;
+}
+
+.cart__button {
+  max-height: 48px;
+  justify-self: flex-end;
+}
+
+.cart__totals {
+  display: flex;
+  flex-flow: column;
+  gap: 1em;
+}
+
+@media screen and (min-width: 601px) {
+  /* .product {
+    width: 30%;
+  } */
+
+  .cart__item {
+    grid-template-columns: 3fr 15fr 5fr 1fr 8fr 1fr;
   }
-  a:hover {
-    color: #747bff;
+
+  .cart__img,
+  .cart__item-subtotal {
+    display: block;
   }
-  button {
-    background-color: #f9f9f9;
+
+  .cart__submit {
+    max-width: 300px;
   }
 }
