--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ button,
 select {
   font: inherit;
   padding: 0.25em;
+  cursor: pointer;
 }
 
 img {
@@ -119,10 +120,16 @@ img {
 }
 
 .product__description {
+  padding-left: 1rem;
+}
+
+.product__description > * {
+  margin-top: 1rem;
 }
 
 .product__description h1 {
   font-size: clamp(1.2rem, 4vw, 2.5rem);
+  margin-top: 2rem;
 }
 
 .cart {
@@ -133,8 +140,11 @@ img {
 .cart__item {
   display: grid;
   grid-template-columns: 4fr 3fr 1fr 1fr;
-  gap: 0.5rem;
+  gap: 1rem;
   margin-bottom: 0.5em;
+  padding: 0.75rem;
+  box-shadow: rgba(255, 255, 255, 0.2) 0px 4px 8px -2px,
+    rgba(255, 255, 255, 0.2) 0px 0px 0px 1px;
 }
 
 .cart__img {
@@ -144,6 +154,7 @@ img {
 
 .cart__select {
   max-height: 48px;
+  width: 2.5rem;
 }
 
 .cart__item-subtotal {
@@ -154,6 +165,8 @@ img {
 .cart__button {
   max-height: 48px;
   justify-self: flex-end;
+  background: none;
+  border: none;
 }
 
 .cart__totals {
